versions/v2.8/modules/en/pages/cluster-deployment/custom-clusters/windows/windows-linux-cluster-feature-parity.adoc
= Windows and Linux Cluster Feature Parity
:page-languages: [en, zh]
:revdate: 2024-09-24
:page-revdate: {revdate}

Windows clusters do not share the same feature support as Linux clusters.

The following chart describes the feature parity between Windows and Linux on Rancher:

|===
| *Component* | *Linux* | *Windows*

| *Distributions*
|
|

| RKE
| Supported
| Supported

| RKE2
| Supported
| Supported

| K3S
| Supported
| Not Supported

| EKS
| Supported
| Not Supported

| GKE
| Supported
| Not Supported

| AKS
| Supported
| Not Supported

| *Rancher Components*
|
|

| Server
| Supported
| Not Supported

| Agent
| Supported
| Supported

| Fleet
| Supported
| Supported

| EKS Operator
| Supported
| Not Supported

| AKS Operator
| Not Supported
| Not Supported

| GKE Operator
| Not Supported
| Not Supported

| Monitoring/Alerting v2
| Supported
| Supported

| Logging v2
| Supported
| Supported

| Istio
| Supported
| Not Supported

| Catalog v2
| Supported
| Not Supported

| OPA
| Supported
| Not Supported

| Longhorn
| Supported
| Not Supported

| CIS Scans
| Supported
| Not Supported

| Backup/Restore Operator
| Supported
| Not Supported

| *CNI / Add-ons*
|
|

| Flannel
| Supported
| Supported

| Canal
| Supported
| Not Supported

| Calico
| Supported
| Supported (RKE2 Only)

| Cilium
| Supported
| Not Supported

| Multus
| Supported
| Not Supported

| Traefik
| Supported
| Not Supported

| NGINX Ingress
| Supported
| Not Supported
|===

For updated information on feature support, you may visit https://github.com/rancher/windows[rancher/windows] on GitHub.
